syntax = "proto3";
package Authenticate;

option go_package = "auth/";

message PGRequest {
  string nonce = 1;
  uint32 message_id = 2;
}

message PGResponse {
  string nonce = 1;
  string server_nonce = 2;
  uint32 message_id = 3;
  int32 p = 4;
  int32 g = 5;
}

message DHParamsRequest {
  string nonce = 1;
  string server_nonce = 2;
  uint32 message_id = 3;
  int32 a = 4;
}

message DHParamsResponse {
  string nonce = 1;
  string server_nonce = 2;
  uint32 message_id = 3;
  int32 b = 4;
}

service AuthGenerator {
  rpc req_pq(PGRequest) returns (PGResponse);
  rpc req_DH_params(DHParamsRequest) returns (DHParamsResponse);
}